--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arsadi Bio Links</title>
+    <title>Yuichiro</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 
 <body>
-    <div class="video-background">
+    <!-- <div class="video-background">
         <video autoplay muted loop>
             <source src="img/bg2.mp4" type="video/mp4">
-            <!-- Tambahkan sumber video lainnya sesuai dengan kebutuhan -->
+           
         </video>
-    </div>
+    </div> 
     
 
-    <!-- Background Animation Text -->
+     Background Animation Text -->
     <span class="bg-text-animation">Yuichiro</span>
     <span class="bg2-text-animation">勇一郎</span>
 
