--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img class="my-photo" src="./img/bio2.jpg" alt="AR Logo">
     <div id="typing"></div>
     <script>
-        var texts = ["Hello", "Im Yuichiro", "Junior Frontend Developer", "日本語教育大学生学科", "Let's be friends👋"];
+        var texts = ["Hello", "Im Yuichiro", "Junior Frontend Developer", "日本語教育大学科大学生", "Let's be friends👋"];
         var count = 0; 
         var index = 0; 
         var currentText = ""; 
