--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
     
 
      Background Animation Text -->
-    <span class="bg-text-animation" data-aos="fade-up"
-    data-aos-duration="2000">Yuichiro</span>
-    <span class="bg2-text-animation" data-aos="fade-up"
-    data-aos-duration="2000">勇一郎</span>
+    <span class="bg-text-animation" data-aos="fade-up">Yuichiro</span>
+    <span class="bg2-text-animation" data-aos="fade-up">勇一郎</span>
 
     <!-- Profile -->
     <img class="my-photo" src="./img/bio2.jpg" alt="AR Logo" data-aos="flip-left"
-    data-aos-easing="ease-out-cubic"
-    data-aos-duration="1000">
+    data-aos-easing="ease-out-cubic">
     <div id="typing"></div>
     <script>
         var texts = ["Hello", "Im Yuichiro", "Junior Frontend Developer", "日本語教育大学科大学生", "Let's be friends👋"];
@@ -71,8 +68,7 @@
 
     <!-- Link List -->
     <ul class="links">
-        <li data-aos="fade-up"
-        data-aos-duration="1000">
+        <li data-aos="fade-up">
             <a href="https://discord.com/users/Takumi-Gin#0301" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-discord-logo"></i>
@@ -83,8 +79,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up"
-        data-aos-duration="2000">
+        <li data-aos="fade-up">
             <a href="https://github.com/yu1chiro" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-github-logo"></i>
@@ -95,8 +90,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up"
-        data-aos-duration="3000">
+        <li data-aos="fade-up">
             <a href="" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-linkedin-logo"></i>
@@ -107,8 +101,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up"
-        data-aos-duration="3000">
+        <li data-aos="fade-up">
             <a href="https://hera-bio-ufrp.vercel.app" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-file"></i>
@@ -119,8 +112,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up"
-        data-aos-duration="3000">
+        <li data-aos="fade-up">
             <a href="https://open.spotify.com/user/4gbzber68kbf57927y0ittk12" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-spotify-logo"></i>
