--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     
 
      Background Animation Text -->
-    <span class="bg-text-animation" data-aos="fade-up">Yuichiro</span>
-    <span class="bg2-text-animation" data-aos="fade-up">勇一郎</span>
+    <span class="bg-text-animation">Yuichiro</span>
+    <span class="bg2-text-animation">勇一郎</span>
 
     <!-- Profile -->
     <img class="my-photo" src="./img/bio2.jpg" alt="AR Logo" data-aos="flip-left"
@@ -68,7 +68,7 @@
 
     <!-- Link List -->
     <ul class="links">
-        <li data-aos="fade-up">
+        <li>
             <a href="https://discord.com/users/Takumi-Gin#0301" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-discord-logo"></i>
@@ -79,7 +79,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up">
+        <li>
             <a href="https://github.com/yu1chiro" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-github-logo"></i>
@@ -90,7 +90,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up">
+        <li>
             <a href="" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-linkedin-logo"></i>
@@ -101,7 +101,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up">
+        <li>
             <a href="https://hera-bio-ufrp.vercel.app" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-file"></i>
@@ -112,7 +112,7 @@
                 </div>
             </a>
         </li>
-        <li data-aos="fade-up">
+        <li>
             <a href="https://open.spotify.com/user/4gbzber68kbf57927y0ittk12" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-spotify-logo"></i>
