--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <span class="bg2-text-animation">勇一郎</span>
 
     <!-- Profile -->
-    <img class="my-photo" src="./img/bio2.jpg" alt="AR Logo" data-aos="flip-left"
-    data-aos-easing="ease-out-cubic">
+    <img class="my-photo" src="./img/bio2.jpg" alt="Yui Logo">
     <div id="typing"></div>
     <script>
         var texts = ["Hello", "Im Yuichiro", "Junior Frontend Developer", "日本語教育大学科大学生", "Let's be friends👋"];
